Montée de version en 2.0.0